--- a/fonts/space_ranger/stylesheet.css
+++ b/fonts/space_ranger/stylesheet.css
@@ -4,8 +4,8 @@
 
 @font-face {
     font-family: 'space_rangerregular';
-    src: url('spaceranger-webfont.woff2') format('woff2'),
-         url('spaceranger-webfont.woff') format('woff');
+    src: url('https://disegraf.github.io/portfolio2021/fonts/space_ranger/spaceranger-webfont.woff2') format('woff2'),
+         url('https://disegraf.github.io/portfolio2021/fonts/space_ranger/spaceranger-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
