--- a/css/style.css
+++ b/css/style.css
@@ -2352,20 +2352,19 @@ width:110px;
 
 .post-module:hover,
 .hover {
-   
-}
-
-.post-module:hover .thumbnail img,
-.hover .thumbnail img {
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    transform: scale(1.1);
-    opacity: 0.6;
-
     -webkit-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
 }
+
+.post-module:hover .thumbnail img,
+.hover .thumbnail .img-bg-post {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    transform: scale(1.1);
+    opacity: 0.6;
+}
+
 
 .post-module .thumbnail {
     background: #000000;
