--- a/css/style.css
+++ b/css/style.css
@@ -2357,7 +2357,7 @@ width:110px;
     box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
 }
 
-.post-module:hover .thumbnail img,
+.post-module:hover .thumbnail .img-bg-post,
 .hover .thumbnail .img-bg-post {
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
